tests/NormalTests/paczka1/fuzzy1/25447637.err
Error in line 14: BU6X9Q0KWD S581 28,9
Error in line 12: jI3 A76 13,2
Error in line 15: BU6X9Q0KWD A878 57,0
Error in line 18: BU6X9Q0KWD A98 99,0
Error in line 22: BU6X9Q0KWD A878 34,72
Error in line 25: jI3 S581 69,98
